src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Custom_Contact_ID__c</fullName>
        <formula>Contact.ContactId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Full_Account_Name__c</fullName>
        <formula>Contact.Account.Full_Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates members who no longer belong to the campaign.  Done because Silverpop does not recognize if the member is deleted from the campaign.</description>
        <inlineHelpText>Designates members who no longer belong to the campaign.  Done because Silverpop does not recognize if the member is deleted from the campaign.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meyers_Id__c</fullName>
        <description>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</description>
        <externalId>true</externalId>
        <inlineHelpText>Used to store the Meyers SF ID for the merge. May be removed after the merge or 12/19</inlineHelpText>
        <label>Meyers Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cirrusadv__Created_by_Cirrus_Insight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created by Cirrus Insight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Email_Opened__c</fullName>
        <formula>cirrusadv__Num_of_Opens__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Clicked__c</fullName>
        <inlineHelpText>First time a link in this email was opened.</inlineHelpText>
        <label>First Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Opened__c</fullName>
        <inlineHelpText>The date this email was first opened by one of the recipients.</inlineHelpText>
        <label>First Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__First_Reply__c</fullName>
        <inlineHelpText>Date when first reply received.</inlineHelpText>
        <label>First Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Hour_Sent__c</fullName>
        <formula>FLOOR ( MOD( cirrusadv__Time_Sent__c - ($System.OriginDateTime),1) *24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The hour of the day that the email was sent. (in UTC)</inlineHelpText>
        <label>Hour Sent (UTC)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Clicked__c</fullName>
        <inlineHelpText>Last time a link in this email was opened.</inlineHelpText>
        <label>Last Clicked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Opened__c</fullName>
        <inlineHelpText>The date the email was most recently opened.</inlineHelpText>
        <label>Last Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Last_Reply__c</fullName>
        <inlineHelpText>Date of the most recent reply.</inlineHelpText>
        <label>Last Reply</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Links_Clicked__c</fullName>
        <formula>cirrusadv__Num_of_Clicks__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Whether or not any links in this email were opened by a recipient.</inlineHelpText>
        <label>Links Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Clicks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times links in this email were opened.</inlineHelpText>
        <label># of Clicks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Opens__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times this tracked email has been opened. (Cirrus Insight)</inlineHelpText>
        <label># of Opens</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Num_of_Replies__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of replies received</inlineHelpText>
        <label># of Replies</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Time_Sent__c</fullName>
        <inlineHelpText>Time the email was sent</inlineHelpText>
        <label>Time Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cirrusadv__Time_to_Open__c</fullName>
        <formula>(cirrusadv__First_Opened__c - cirrusadv__Time_Sent__c) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How long did this email take to open? (in minutes)</inlineHelpText>
        <label>Time to Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cirrusadv__isTracked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tracked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>silverpop__member_id__c</fullName>
        <externalId>true</externalId>
        <label>Silverpop Member Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <recordTypes>
        <fullName>Default_CampaignMember</fullName>
        <active>true</active>
        <description>for soapbox</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>sbx_Registration_CampaignMember</fullName>
        <active>true</active>
        <description>Soapbox Events registration Campaign Member record type</description>
        <label>Soapbox Registration</label>
    </recordTypes>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>